henriette tester push

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Henriette setter opp git</title>
+    <title>Henriette setter opp git, og tester push</title>
 </head>
 <body>
 
