--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jeg kan ikke finde ud af det her</title>
+    <title>Jeg håber det her fungere denne gang</title>
 </head>
 <body>
 
