--- a/Tours.html
+++ b/Tours.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Test 1 </title>
+</head>
+<body>
 
-// object - Tour
-
-function tours (tourName, tourInfo, startTime, duration, meetingPoint, tourPrice, tourLocation) {
+<script> function tours (tourName, tourInfo, startTime, duration, meetingPoint, tourPrice, tourLocation) {
     this.tourname = tourName;
     this.tourInfo = tourInfo;
     this.startTime = startTime;
@@ -14,6 +19,9 @@ let tour1 = new tours("Old Copenhagen", "The old city", "12:00", "2 HRS", "Chris
 let tour2 = new tours("Copenhagen Higlights", "The little Mermaid, Amalienborg and Nyhavn", "12:00", "1 HR", "Nyhavn", "5 EUR", "Copenhagen");
 let tour3 = new tours("Rosenborg Castle and Royal Jewelry", "Museum", "11.00", "2 HRS", "Nørreport St.", "10 EUR", "Copenhagen");
 
+
 var tours = [tour1, tour2, tour3];
 
-console.log(tours);
+console.log(tour1); </script>
+</body>
+</html>
