henriette tester push

--- a/indexlogin.html
+++ b/indexlogin.html
@@ -7,11 +7,13 @@
 <body>
 
 <ul>
-    <li><a href="index.html">Home</a></li>
-    <li style="float:right;"><a class="active" href="login.html">Login</a></li>
-    <li style="float:right;"><a class="active" href="register.html">Register</a></li>
+    <li><a href="Voreswebsite.html">Home</a></li>
+    <li><a class="active" href="login.html">Login</a></li>
+    <li><a class="active" href="register.html">Register</a></li>
 
 </ul>
+
+
 
 
 
