--- a/Vores website.html
+++ b/Vores website.html
@@ -11,7 +11,7 @@
         <ul class="main-nav">
              <li class="active"><a href=""> Hjem</a></li>
              <li><a href=""> Rejser</a></li>
-             <li><a href=""> Hvem er vi?</a></li>
+             <li><a href="hvemervifilen.html"> Hvem er vi?</a></li>
              <li><a href=""> Kontakt</a></li>
              <li><a href=""> Log ind</a></li>
         </ul>
