--- a/login.html
+++ b/login.html
@@ -26,6 +26,18 @@
 
 </div>
 
+<div class="content">
+
+    <h1>Admin Login</h1>
+    <form id="adminlogin-form">
+        <input id="enteredAdminName" type="text" placeholder="Enter Username" autocomplete="new-username" value=""/>
+        <input id="enteredAdminPass" type="password" placeholder="Enter Password" autocomplete="new-password" value=""/>
+        <input id="adminlogin_btn" type="submit" value="Login" onClick="checkAdminLogin()"/>
+    </form>
+
+
+</div>
+
 <button onclick="myFunction()">Settings</button>
 
 <script>
