--- a/Peder/register.html
+++ b/Peder/register.html
@@ -7,7 +7,7 @@
 <body>
 
 <ul>
-    <li><a href="Voreswebsite.html">Home</a></li>
+    <li><a href="../Voreswebsite.html">Home</a></li>
     <li style="float:right;"><a class="active" href="login.html">Login</a></li>
     <li style="float:right;"><a class="active" href="register.html">Register</a></li>
 </ul>
