--- a/Voreswebsite.html
+++ b/Voreswebsite.html
@@ -13,7 +13,7 @@
              <li><a href=""> Rejser</a></li>
              <li><a href=""> Hvem er vi?</a></li>
              <li><a href=""> Kontakt</a></li>
-             <li><a href="indexlogin.html"> Log ind</a></li>
+             <li><a href="Peder/indexlogin.html"> Log ind</a></li>
         </ul>
     
         </div>
