--- a/Peder/indexlogin.html
+++ b/Peder/indexlogin.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My application</title>
+    <title>Hovedlogin</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
+    <!-- Vi forbinder vores html dokument til vores styles.css -->
 </head>
 <body>
 
 <ul>
     <li><a href="../Voreswebsite.html">Home</a></li>
-    <li><a class="active" href="login.html">Login</a></li>
-    <li><a class="active" href="register.html">Register</a></li>
+    <li style="float:right";><a class="active" href="login.html">Login</a></li>
+    <li style="float:right";><a class="active" href="register.html">Register</a></li>
 
 </ul>
+<!-- Der laves en liste, der skaber 3 knapper. Hver knap vil fører hen til en anden html fil, når den trykkes.
+ class="active" henfører til css.dokumentet, så den får bestemte attributter-->
 
-
-
-
-
-<script src="app.js"> </script>
-
+<p> On this page you can return to the homepage, create an account or login.</p>
 </body>
 </html>
