--- a/Peder/indstillinger.html
+++ b/Peder/indstillinger.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>g</title>
+    <title>Settings</title>
+    <link type="text/css" rel="stylesheet" href="styles.css">
+    <!-- HTML dokumentet forbindes til vores CSS-dokument-->
 </head>
 <body>
-Her kan du slette din bruger
+<ul>
+    <li><a href="../Voreswebsite.html">Home</a></li>
+</ul>
+    <p> In settings you can delete your user </p>
 
-<h2>Clear user</h2>
 <input id="clear_users_btn" type="submit" value="Clear user" onClick="clearUser()"/>
+<!-- Når der klikkes på denne knap, vil funktionen clearUser() blive brugt-->
 <script>src="app.js"</script>
+<!-- I vores script henviser vi til vores js-fil, så clearUser() kan blive brugt-->
 </body>
 </html>
