henriette tester push

--- a/Peder/indstillinger.html
+++ b/Peder/indstillinger.html
@@ -13,6 +13,8 @@
     <p> In settings you can delete your user </p>
 
 <input id="clear_users_btn" type="submit" value="Clear user" onClick="clearUser()"/>
+
+<p> "Hej adminUsername"</p>
 <!-- Når der klikkes på denne knap, vil funktionen clearUser() blive brugt-->
 <script>src="app.js"</script>
 <!-- I vores script henviser vi til vores js-fil, så clearUser() kan blive brugt-->
