--- a/Peder/login.html
+++ b/Peder/login.html
@@ -21,7 +21,7 @@
     <form id="login-form">
         <input id="enteredName" type="text" placeholder="Enter Username" autocomplete="new-username" value=""/>
         <input id="enteredPass" type="password" placeholder="Enter Password" autocomplete="new-password" value=""/>
-        <input id="login_btn" type="submit" value="Login" onClick="checkLogin()"/>
+        <input id="login_btn" type="button" value="Login" onClick="checkLogin()"/>
     </form>
 </div>
 <!-- Der skabes en division eller "sektion" på grund af <div></div>, der går at indholdet får de elementer fra class="content" fra CSS
@@ -34,7 +34,7 @@
     <form id="adminlogin-form">
         <input id="enteredAdminName" type="text" placeholder="Enter Username" autocomplete="new-username" value=""/>
         <input id="enteredAdminPass" type="password" placeholder="Enter Password" autocomplete="new-password" value=""/>
-        <input id="adminlogin_btn" type="submit" value="Login" onClick="checkAdminLogin()"/>
+        <input id="adminlogin_btn" type="button" value="Login" onclick="checkAdminLogin()"/>
     </form>
 </div>
 <!-- Samme form som før borset for at den er designet for admins til at logge ind-->
