--- a/Peder/indstillinger.html
+++ b/Peder/indstillinger.html
@@ -42,6 +42,12 @@
 <p> Antal deltagere i Tour 1:</p> <p id="demo"></p>
 <!-- Når der klikkes på denne knap, vil funktionen clearUser() blive brugt-->
 
+<p>Her kan du tilføje deltagernes navne på tour 1</p>
+<input id="enteredName" type="text" placeholder="Dit navn" autocomplete="new_navn" value=""/>
+<br>
+<input id="name_btn" type="button" value="tilfoj" onClick="tournames()"/>
+<br>
+<input id="name_btn" type="button" value="se alle navne" onClick="hehe()"/>
 <script src="app.js"> </script>
 <!-- I vores script henviser vi til vores js-fil, så clearUser() kan blive brugt-->
 </body>
