--- a/Peder/betaling.html
+++ b/Peder/betaling.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<input id="info1" type="submit" value="Informationer om tur 1" onClick="goToReciet()"/>
-<input id="info1" type="submit" value="Informationer om tur 1" onClick="showMoreInfo1()"/>
+<input id="info1" type="submit" value="Rigtig betalingsinformation" onClick="goToReciet()"/>
+<input id="info1" type="submit" value="Forkert betalingsinformation" onClick="wrongInfo()"/>
+<script src="app2.js"></script>
 </body>
 </html>
