--- a/Leila/ToursIndex.html
+++ b/Leila/ToursIndex.html
@@ -1,60 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Tours</title>
     <link href="ToursStyle.css" type="text/css" rel="stylesheet">
 
 </head>
-    <body>
-        <!-- <div id="content">
-            <p> Meget kommer altså til at ændre sig i fremtiden, når AI har overtaget endnu flere dele af samfundet.
+<body>
+<table id=“myTable”>
+    <thead>
+    <tr>
+        <th><b>Tour name</b></th>
+        <th><b>Start time</b></th>
+        <th><b>Date</b></th>
+        <th><b>Price</b></th>
+        <th>Add to booking</th>
+    </tr>
+    </thead>
+    <tbody id = "tbody">
+    </tbody>
+    <tfoot>
+    </tfoot>
+</table>
+<table id="hello">
+    <thead>
+    <tr>
+        <th><b>Tour name</b></th>
+        <th><b>Start time</b></th>
+        <th><b>Date</b></th>
+        <th><b>Price</b></th>
+        <th>Add to booking</th>
+    </tr>
+    </thead>
+    <tbody id = "tbody">
+    </tbody>
+    <tfoot>
+    </tfoot>
+</table>
 
-                Frygten for at miste sit job til AI og robotter er helt berettiget, mener Rony Medaglia.
-
-                “En del manuelt og intellektuelt arbejde vil blive udført af maskiner i fremtiden. Vi kommer til at skelne mellem rutinearbejde og ikke-rutinearbejde. Jobs, hvor man skal bruge empati og kreativitet, vil være forbeholdt mennesker, mens rutinearbejde primært vil blive udført af maskiner,” siger han.
-
-                Bus- eller taxachauffører, men også advokater og jurister, bliver højest sandsynligt helt eller delvist erstattet af AI, mener Medaglia. Selv de jobs, man måske tror er sværere at erstatte med en algoritme, kan blive ramt:
-
-                “Dele af undervisningen i for eksempel grammatik og historie kan også blive erstattet af maskiner i fremtiden. Det samme gælder finans- og sportsjournalister, der beskriver bevægelser på aktiemarkedet eller kampresultater,” forklarer han.
-
-                Dog er Rony Medaglia er ikke overvejende pessimistisk i forhold til fremtiden:
-
-                ”I 90’erne så vi et gennembrud i biologien i forhold til at klone dyr, og vi troede, at vi allesammen ville begynde at klone mennesker i løbet af de næste 10 år. Men vi kom frem til, at det ikke var etisk forsvarligt, og derfor gjorde vi det ikke. Det, at vi har AI betyder ikke, at vi behøver at bruge det på en dårlig måde. Men vi bør tale om og diskutere, hvilken fremtid, vi vil have, før den allerede er her,” afslutter han. </p>
-                Meget kommer altså til at ændre sig i fremtiden, når AI har overtaget endnu flere dele af samfundet.
-
-                Frygten for at miste sit job til AI og robotter er helt berettiget, mener Rony Medaglia.
-
-                 “En del manuelt og intellektuelt arbejde vil blive udført af maskiner i fremtiden. Vi kommer til at skelne mellem rutinearbejde og ikke-rutinearbejde. Jobs, hvor man skal bruge empati og kreativitet, vil være forbeholdt mennesker, mens rutinearbejde primært vil blive udført af maskiner,” siger han.
-
-                 Bus- eller taxachauffører, men også advokater og jurister, bliver højest sandsynligt helt eller delvist erstattet af AI, mener Medaglia. Selv de jobs, man måske tror er sværere at erstatte med en algoritme, kan blive ramt:
-
-                 “Dele af undervisningen i for eksempel grammatik og historie kan også blive erstattet af maskiner i fremtiden. Det samme gælder finans- og sportsjournalister, der beskriver bevægelser på aktiemarkedet eller kampresultater,” forklarer han.
-
-                 Dog er Rony Medaglia er ikke overvejende pessimistisk i forhold til fremtiden:
-
-                ”I 90’erne så vi et gennembrud i biologien i forhold til at klone dyr, og vi troede, at vi allesammen ville begynde at klone mennesker i løbet af de næste 10 år. Men vi kom frem til, at det ikke var etisk forsvarligt, og derfor gjorde vi det ikke. Det, at vi har AI betyder ikke, at vi behøver at bruge det på en dårlig måde. Men vi bør tale om og diskutere, hvilken fremtid, vi vil have, før den allerede er her,” afslutter han. </p>
-
-        </div>
-
-        <a id="show-more">Show more</a> -->
-
-        <table id=“myTable”>
-            <thead>
-            <tr>
-                <th><b>Tour name</b></th>
-                <th><b>Start time</b></th>
-                <th><b>Date</b></th>
-                <th><b>Price</b></th>
-                <th>Add to booking</th>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-            <tfoot>
-            </tfoot>
-        </table>
-
-    </body>
-    <script src="Tours.js"></script>
+</body>
+<script src="Tours.js"></script>
+<script src="ToursTable.js"></script>
 </html>
