--- a/Peder/booking.html
+++ b/Peder/booking.html
@@ -10,6 +10,14 @@
 <input id="info1" type="submit" value="Informationer om tur 1" onClick="showMoreInfo1()"/>
 <br>
 <input id="info1" type="button" value="Bestil Tur" onClick="goToBooking()"/>
+<br>
+<input id="info1" type="button" value="Tiljøj dig til tur 1" onClick="addmember1()"/>
+<br>
+<input id="info1" type="button" value="Tiljøj dig til tur 2" onClick="addmember2()"/>
+<br>
+<input id="info1" type="button" value="Tiljøj dig til tur 3" onClick="addmember3()"/>
+
+
 <script src="app.js"></script>
 </body>
 </html>
