--- a/Leila/ToursIndex.html
+++ b/Leila/ToursIndex.html
@@ -7,21 +7,21 @@
 
 </head>
 <body>
-<table id=“myTable”>
+<!-- <table id=“myTable”>
     <thead>
     <tr>
         <th><b>Tour name</b></th>
         <th><b>Start time</b></th>
         <th><b>Date</b></th>
         <th><b>Price</b></th>
-        <th>Add to booking</th>
+        <th><b>Add to booking</b></th>
     </tr>
     </thead>
     <tbody id = "tbody">
     </tbody>
     <tfoot>
     </tfoot>
-</table>
+</table> -->
 <table id="hello">
     <thead>
     <tr>
@@ -29,10 +29,11 @@
         <th><b>Start time</b></th>
         <th><b>Date</b></th>
         <th><b>Price</b></th>
-        <th>Add to booking</th>
+        <th><b>Add to booking</b></th>
     </tr>
     </thead>
     <tbody id = "tbody">
+
     </tbody>
     <tfoot>
     </tfoot>
