tours and calendar

--- a/Leila/ToursIndex.html
+++ b/Leila/ToursIndex.html
@@ -22,6 +22,9 @@
     <tfoot>
     </tfoot>
 </table> -->
+
+<!-- LT - Her har vi table frameworken. Vi henter indholdet fra js-filen
+Ovenstående kode er første forsøg, men af en eller anden årsag, kunne vi ikke få last koden med table id="myTable"-->
 <table id="hello">
     <thead>
     <tr>
