--- a/Onur/index.html
+++ b/Onur/index.html
@@ -21,7 +21,8 @@
 
 <form name="frmDataEntry" action="processor.html" method ="get">
 
-<h1>Kortoplysninger</h1>
+<h1>DKK 599</h1>
+<h2>Kortoplysninger</h2>
 <p>Kortnummer</p>
 <input type="text" name="txtUserName" id="KNR" value="" placeholder="Kortnummer" maxlength="12"/>
 </form>
@@ -34,7 +35,7 @@
         <p>Kontrolkode</p>
         <input type="text" name="txtControl" id="TCR" value="" placeholder="Kontrolkode" maxlength="12"/> <form/>
     </form>
-    <input id="rgr_btn" type="submit" value="Betal" onClick="storeLogin()"/>
+    <input id="rgr_btn" type="submit" value="Betal" onClick="setItem()"/>
 
     </body>
 </header>
