--- a/Peder/underUdvikling/localstorage/index.html
+++ b/Peder/underUdvikling/localstorage/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
 <div class="content">
@@ -12,11 +13,17 @@
     <form id="register-form">
         <input id="username" type="text" placeholder="Username" autocomplete="new-username" value=""/>
         <input id="password" type="password" placeholder="Password" autocomplete="new-username" value=""/>
-        <input id="registration_btn" type="submit" value="Register" onClick="loop()"/>
-        <input id="registration_bt2n" type="submit" value="checkusername" onClick="hejsa()"/>
-
+        <br>
+        <input id="registration_btn" type="button" value="Register" onClick="loop()"/>
+        <br>
+        <input id="registration_bt2n" type="button" value="checkusername" onClick="logintest()"/>
+        <br>
+        <input id="registration" type="button" value="Slet alle brugere" onClick="slet()"/>
     </form>
 </div>
+
+<div id="output"></div>
+
 <script src="js.js"></script>
 </body>
 </html>
