Last edits from friday

--- a/Leila/CALENDAR.html
+++ b/Leila/CALENDAR.html
@@ -33,13 +33,35 @@
                 <div>Sat</div>
             </div>
             <div class="days">
-
             </div>
+            <div id="output"></div>
         </div>
+    </div>
+
+    <div>
+    <table id="hello">
+        <thead>
+        <tr>
+            <th><b>Tour name</b></th>
+            <th><b>Start time</b></th>
+            <th><b>Date</b></th>
+            <th><b>Price</b></th>
+            <th><b>Add to booking</b></th>
+        </tr>
+        </thead>
+        <tbody id = "tbody">
+
+        </tbody>
+        <tfoot>
+        </tfoot>
+    </table>
     </div>
 
     <!-- include calendar.js -->
     <script src = "CALENDAR.js"></script>
+    <script src="Tours.js"></script>
+    <script src="ToursTable.js"></script>
 
 </body>
+
 </html>
