--- a/Leila/ToursIndex.html
+++ b/Leila/ToursIndex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Tours</title>
-    <link href="ToursStyle.css" type="text/css" rel="stylesheet">
+    <link href="CalendarStyle.css" type="text/css" rel="stylesheet">
 
 </head>
 <body>
@@ -43,6 +43,8 @@ Ovenstående kode er første forsøg, men af en eller anden årsag, kunne vi ikk
 </table>
 
 </body>
+<script src="CALENDAR.js"></script>
 <script src="Tours.js"></script>
 <script src="ToursTable.js"></script>
+
 </html>
