Last edits from friday

--- a/Leila/CALENDAR.html
+++ b/Leila/CALENDAR.html
@@ -43,8 +43,10 @@
         <thead>
         <tr>
             <th><b>Tour name</b></th>
-            <th><b>Start time</b></th>
+            <th><b>Tour Description</b></th>
             <th><b>Date</b></th>
+            <th><b>Start time</b></th>
+            <th><b>Duration</b></th>
             <th><b>Price</b></th>
             <th><b>Add to booking</b></th>
         </tr>
