--- a/Leila/createTour.html
+++ b/Leila/createTour.html
@@ -16,21 +16,84 @@
             <br>
             <input id="duration" type="text" placeholder="Duration of tour" autocomplete="new-duration" value=""/>
             <br>
-            <input id="duration" type="text" placeholder="Duration of tour" autocomplete="new-duration" value=""/>
+            <input id="price" type="text" placeholder="Price of tour" autocomplete="new-price" value=""/>
+            <br>
+            <input id="create_btn" type="button" value="Create" onClick="storeLogin()"/>
             <br>
 
+            <!-- The elements above is taken from the class/object "Tours"
+              this.tourName
+              this.tourInfo
+              this.tourDate
+              this.duration = duration;
+              this.meetingPoint = meetingPoint;
+              this.tourPrice = tourPrice; -->
 
+            <!-- Dropdown lists-->
+            Preferred contact date:
+            <br/>
+            <select type="text" id="tour_day">
+                <option selected disabled>-Day-</option>
+                <option value="1">01</option>
+                <option value="2">02</option>
+                <option value="3">03</option>
+                <option value="4">04</option>
+                <option value="5">05</option>
+                <option value="6">06</option>
+                <option value="7">07</option>
+                <option value="8">08</option>
+                <option value="9">09</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+            </select>
 
-            <input id="registration_btn" type="button" value="Register" onClick="storeLogin()"/>
-            <br>
+            <select type="text" id="tour_month">
+                <option selected disabled>-Month-</option>
+                <option value="1">January</option>
+                <option value="2">February</option>
+                <option value="3">March</option>
+                <option value="4">April</option>
+                <option value="5">May</option>
+                <option value="6">June</option>
+                <option value="7">July</option>
+                <option value="8">August</option>
+                <option value="9">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
+            </select>
+
+            <select type="text" id="tour_year">
+                <option selected disabled>-Year-</option>
+                <option value="2019">2019</option>
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+                <option value="2022">2022</option>
+                <option value="2023">2023</option>
+            </select>
+            <br/> <!-- insert remaining dropdown list ("contact_month" + "contact_year") here -->
     </form>
 
-    <!--
 
-        this.duration = duration;
-        this.meetingPoint = meetingPoint;
-        this.tourPrice = tourPrice;
-        this.tourLocation = tourLocation;-->
 </div>
 
 </div>
