--- a/Peder/indexlogin.html
+++ b/Peder/indexlogin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Hovedlogin</title>
-    <link type="text/css" rel="stylesheet" href="styles.css">
+    <link type="text/css" rel="stylesheet" href="HELP/styles.css">
     <!-- Vi forbinder vores html dokument til vores styles.css -->
 </head>
 <body>
@@ -10,7 +10,7 @@
 <ul>
     <li><a href="../Voreswebsite.html">Home</a></li>
     <li style="float:right";><a class="active" href="login.html">Login</a></li>
-    <li style="float:right";><a class="active" href="register.html">Register</a></li>
+    <li style="float:right";><a class="active" href="HELP/register_login.html">Register</a></li>
 
 </ul>
 <!-- Der laves en liste, der skaber 3 knapper. Hver knap vil fører hen til en anden html fil, når den trykkes.
