--- a/Peder/indstillinger.html
+++ b/Peder/indstillinger.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Settings</title>
-    <link type="text/css" rel="stylesheet" href="styles.css">
+    <link type="text/css" rel="stylesheet" href="HELP/styles.css">
     <!-- HTML dokumentet forbindes til vores CSS-dokument-->
     <style>
         input{width: 300px}
