--- a/Peder/login.html
+++ b/Peder/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My application</title>
-    <link type="text/css" rel="stylesheet" href="styles.css">
+    <link type="text/css" rel="stylesheet" href="HELP/styles.css">
     <!-- Vi forbinder vores html dokument til vores css-fil -->
 </head>
 <body>
@@ -10,7 +10,7 @@
 <ul>
     <li><a href="../Voreswebsite.html">Home</a></li>
     <li style="float:right;"><a class="active" href="login.html">Login</a></li>
-    <li style="float:right;"><a class="active" href="register.html">Register</a></li>
+    <li style="float:right;"><a class="active" href="HELP/register_login.html">Register</a></li>
 
 
 </ul>
