All files are attached

--- a/Peder/HELP/userpage.html
+++ b/Peder/HELP/userpage.html
@@ -26,6 +26,8 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
     <br>
     <input id="booktour2" type="button" value="Book the second tour" onClick="booktourtwo()"/>
 </form>
+<a href="../../Leila/CALENDAR.html">Book nu for faaan!</a>
+
 <script src="register_login_function.js"> </script>
 </body>
 </html>
