All files attached correctly

--- a/Leila/ToursIndex.html
+++ b/Leila/ToursIndex.html
@@ -7,6 +7,8 @@
 
 </head>
 <body>
+
+<!-- Første forsøg på at lave en table, men af en eller anden årsag, kunne vi ikke koden til at virke med id="myTable"-->
 <!-- <table id=“myTable”>
     <thead>
     <tr>
@@ -23,8 +25,8 @@
     </tfoot>
 </table> -->
 
-<!-- LT - Her har vi table frameworken. Vi henter indholdet fra js-filen
-Ovenstående kode er første forsøg, men af en eller anden årsag, kunne vi ikke få last koden med table id="myTable"-->
+<!-- LT - Her har vi table-header. Vi henter indholdet fra Tours.js og ToursTabble.js -->
+
 <table id="hello">
     <thead>
     <tr>
