--- a/Peder/HELP/userpage.html
+++ b/Peder/HELP/userpage.html
@@ -28,6 +28,16 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
 </form>
 <a href="../../Leila/CALENDAR.html">Book nu for faaan!</a>
 
+<p> Here you can see your upcoming tours! </p>
+
+<script>
+    // lav en loop der kører igennem alle tours//
+    // hvis username ikke er tilmeldt ---> "ingen booking endnu"
+    // hvis username er tilmeldt --> Hvis upcomming booking//
+</script>
+<form>
+
+</form>
 <script src="register_login_function.js"> </script>
 </body>
 </html>
