--- a/Leila/CALENDAR.html
+++ b/Leila/CALENDAR.html
@@ -38,6 +38,25 @@
         </div>
     </div>
 
+
+    <!-- Første forsøg på at lave en table, men af en eller anden årsag, kunne vi ikke koden til at virke med id="myTable"-->
+    <!-- <table id=“myTable”>
+        <thead>
+        <tr>
+            <th><b>Tour name</b></th>
+            <th><b>Start time</b></th>
+            <th><b>Date</b></th>
+            <th><b>Price</b></th>
+            <th><b>Add to booking</b></th>
+        </tr>
+        </thead>
+        <tbody id = "tbody">
+        </tbody>
+        <tfoot>
+        </tfoot>
+    </table> -->
+
+    <!-- LT - Her har vi table-header. Vi henter indholdet fra Tours.js og ToursTabble.js -->
     <div>
     <table id="hello">
         <thead>
