--- a/Leila/createTour.html
+++ b/Leila/createTour.html
@@ -33,7 +33,8 @@
               this.tourDate
               this.duration = duration;
               this.meetingPoint = meetingPoint;
-              this.tourPrice = tourPrice; -->
+              this.tourPrice = tourPrice;
+              this.location -->
     </form>
 </div>
 
