review added (men det ser ikke særlig pænt ud :/ )

--- a/Leila/CALENDAR.html
+++ b/Leila/CALENDAR.html
@@ -68,6 +68,7 @@
             <th><b>Duration</b></th>
             <th><b>Price</b></th>
             <th><b>Add to booking</b></th>
+            <th><b>Add review</b></th>
         </tr>
         </thead>
         <tbody id = "tbody">
