--- a/Peder/HELP/userpage.html
+++ b/Peder/HELP/userpage.html
@@ -45,6 +45,24 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
 </table>
 <a href="../../Leila/CALENDAR.html">Book nu for faaan!</a>
 <br>
+<br>
+<br>
+<br>
+
+<p> Your bookings: </p>
+<!-- -->
+
+<p>Additional comments</p>
+
+<textarea type="text" rows="5" cols="30" id="review-tour" value="" placeholder="Review the tour here!"></textarea>
+</br>
+
+<!--Submit button to send review-->
+<button type="submit" style="cursor: pointer;">Review</button>
+<br>
+<br>
+
+<p>Delete your account</p>
 <input id="deleteaccount" type="button" value="Press here if you want to delete your account" onClick="deleteall()"/>
 <script src="register_login_function.js"> </script>
 </body>
