--- a/Peder/HELP/GuidePage.html
+++ b/Peder/HELP/GuidePage.html
@@ -43,6 +43,24 @@
 </div>
 
 </div>
+<p> Alle ture </p>
+<table id="table" border="1">
+    <!-- The Row Number 0 -->
+    <tr>
+        <th>Tour Name</th>
+        <th>Tour Info</th>
+        <th>Tour Date</th>
+        <th>Start Time</th>
+        <th>Duration</th>
+        <th>Meeting Point</th>
+        <th>Tour price</th>
+        <th>Tour location</th>
+        <th>Limit on participants</th>
+        <th>Participants</th>
+        <th>Click to change information!</th>
+    </tr>
+
+</table>
 </body>
 <script src="GuidePage.js"></script>
 </html>
