--- a/Peder/HELP/GuidePage.html
+++ b/Peder/HELP/GuidePage.html
@@ -5,6 +5,9 @@
     <title>Guide Page</title>
 </head>
 <body>
+
+<!--- We create a table in which the guide needs to fill the input fields with data in order to create a tour.
+      We assign an attribute for each row in order to create the tour with our function CreateTour() -->
 <div class="container">
     <h1>Create your tour</h1>
     <form id="create-tour">
@@ -29,21 +32,23 @@
         <br>
         <input id="create_btn" type="button" value="Create" onClick="CreateTour()"/>
         <br>
-<p>Here you can delete your tour</p>
+
+
+        <!-- We define two input field.
+        In the first field, the user can enter the data, in this case the tour name of the tour we want to be deleted
+        The second input field is a button which on click activates the function deleteTour() -->
+        <h1>Here you can delete your tour</h1>
         <input id="delete_name" type="text" placeholder="Name of the tour you want to delete" value=""/>
         <input id="delete_tour" type="button" value="Delete" onClick="deleteTour()"/>
-        <!-- The elements above is taken from the class/object "Tours"
-          this.tourName
-          this.tourInfo
-          this.tourDate
-          this.duration = duration;
-          this.meetingPoint = meetingPoint;
-          this.tourPrice = tourPrice; -->
+        <br>
     </form>
 </div>
 
 </div>
-<p> Alle ture </p>
+
+<!--- We create a table for all tours that is already established
+      The attribute (id) assigned for the this table is "table". With the help of the attribute, we assign functions in -->
+<h1> All tours </h1>
 <table id="table" border="1">
     <!-- The Row Number 0 -->
     <tr>
