--- a/FINAL/login.html
+++ b/FINAL/login.html
@@ -39,10 +39,10 @@
 
     <h1>Guide Login</h1>
     <p> If you are a guide, you can sign in here </p>
-    <form id="adminlogin-form">
-        <input id="enteredAdminName" type="text" placeholder="Username"  value=""/> <br>
-        <input id="enteredAdminPass" type="password" placeholder="Password"  value=""/> <br>
-        <input id="adminlogin_btn" type="button" value="Login" onclick="checkGuideLogin()"/>
+    <form id="guidelogin-form">
+        <input id="enteredGuideName" type="text" placeholder="Username"  value=""/> <br>
+        <input id="enteredGuidePass" type="password" placeholder="Password"  value=""/> <br>
+        <input id="guideLoginbutton" type="button" value="Login" onclick="checkGuideLogin()"/>
     </form>
 </div>
 
