--- a/Peder/underUdvikling/hejgg.html
+++ b/Peder/underUdvikling/hejgg.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>gggg</title>
 </head>
 <body>
-$END$
+<script>
+    function isEven(number){
+        if(number%2===0)
+        {even = true}
+
+       else{
+        even = false}
+            return even;
+    }
+    console.log(isEven(2))
+</script>
 </body>
 </html>
