Expanded Methods in the Class User

--- a/FINAL2/login.html
+++ b/FINAL2/login.html
@@ -21,7 +21,7 @@
         <br>
         <input id="password" type="password" placeholder="Password"  value=""/>
         <br>
-        <input id="registration" type="button" value="Register" onClick="storeUser()"/>
+        <input id="registration" type="button" value="Register"/>
         <br>
     </form>
 
@@ -33,19 +33,19 @@
     <br>
     <input id="checkpassword" type="password" placeholder="Password" value=""/>
     <br>
-    <input id="login" type="button" value="Login" onClick="login()"/>
+    <input id="login" type="button" value="Login"/>
 
     <br>
 
     <h1>Guide Login</h1>
     <p> If you are a guide, you can sign in here </p>
-    <form id="adminlogin-form">
-        <input id="enteredAdminName" type="text" placeholder="Username"  value=""/> <br>
-        <input id="enteredAdminPass" type="password" placeholder="Password"  value=""/> <br>
-        <input id="adminlogin_btn" type="button" value="Login" onclick="checkGuideLogin()"/>
+    <form id="guidelogin-form">
+        <input id="enteredGuideName" type="text" placeholder="Username"  value=""/> <br>
+        <input id="enteredGuidePass" type="password" placeholder="Password"  value=""/> <br>
+        <input id="guideLoginbutton" type="button" value="Login" onclick="checkGuideLogin()"/>
     </form>
 </div>
-
+<script src="User_Class.js"></script>
 <script src="Login.js"> </script>
 
 </body>
