--- a/FINAL2/userPage.html
+++ b/FINAL2/userPage.html
@@ -15,7 +15,7 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
 <form id="change_information">
     <input id="newusername" type="text" placeholder="Enter your new Username"  value=""/>
     <br>
-    <input id="changeusername" type="button" value="Change your Username" onClick="setnewUsername()"/>
+    <input id="changeusername" type="button" value="Change your Username" />
     <br> <br>
     <input id="newpassword" type="password" placeholder="Enter your new Password"  value=""/>
     <br>
@@ -78,7 +78,7 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
 <input id="deleteaccount" type="button" value="Press here if you want to delete your account" onClick="deleteall()"/>
 <br>
 
-
-<script src="Login.js"> </script>
+<script src="User_Class.js"></script>
+<script src="Userpage.js"> </script>
 </body>
 </html>
