guidepage efter mødet med Isabella

--- a/Leila/CALENDAR.html
+++ b/Leila/CALENDAR.html
@@ -81,7 +81,7 @@
 
     <!-- include calendar.js -->
     <script src = "CALENDAR.js"></script>
-    <script src="Tours.js"></script>
+    <script src="createTour.js"></script>
     <script src="ToursTable.js"></script>
 
 </body>
