Expanded Methods in the Class User

--- a/FINAL2/userPage.html
+++ b/FINAL2/userPage.html
@@ -19,7 +19,7 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
     <br> <br>
     <input id="newpassword" type="password" placeholder="Enter your new Password"  value=""/>
     <br>
-    <input id="changepassword" type="button" value="Change your Password" onClick="setnewPassword()"/>
+    <input id="changepassword" type="button" value="Change your Password"/>
     <br>
 
 </form>
