Class User is complete

--- a/FINAL2/userPage.html
+++ b/FINAL2/userPage.html
@@ -75,7 +75,7 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
 <br>
 
 <p>Delete your account</p>
-<input id="deleteaccount" type="button" value="Press here if you want to delete your account" onClick="deleteall()"/>
+<input id="deleteaccount" type="button" value="Press here if you want to delete your account"/>
 <br>
 
 <script src="User_Class.js"></script>
