--- a/FINAL/guidePage.html
+++ b/FINAL/guidePage.html
@@ -59,8 +59,14 @@
         <th>Participants</th>
         <th>Click to change information!</th>
     </tr>
+    <tbody id = "tbody">
+
+    </tbody>
+    <tfoot>
+    </tfoot>
 
 </table>
+
 </body>
 <script src="Tour.js"></script>
 <script src="GuidePage.js"></script>
