Class User is complete

--- a/FINAL2/changeTour.html
+++ b/FINAL2/changeTour.html
@@ -15,8 +15,9 @@
 
     </tr>
 </table>
-    <button type='button' id="dewit" >Change info!</button>;
-
-</body>
+    <button type='button' id="change_Tour" >Change info!</button>;
+<script src="Tour_Class.js"></script>
 <script src="ChangeTour.js"></script>
+</body>
+
 </html>
