--- a/FINAL2/guidePage.html
+++ b/FINAL2/guidePage.html
@@ -27,11 +27,11 @@
         <br>
         <input id="limit" type="text" placeholder="Amount Limit" autocomplete="new-location" value=""/>
         <br>
-        <input id="create_btn" type="button" value="Create" onClick="CreateTour()"/>
+        <input id="create_tour" type="button" value="Create" />
         <br>
 <p>Here you can delete your tour</p>
         <input id="delete_name" type="text" placeholder="Name of the tour you want to delete" value=""/>
-        <input id="delete_tour" type="button" value="Delete" onClick="deleteTour()"/>
+        <input id="delete_tour" type="button" value="Delete"/>
         <!-- The elements above is taken from the class/object "Tours"
           this.tourName
           this.tourInfo
@@ -62,5 +62,6 @@
 
 </table>
 </body>
+<script src="Tour_Class.js"></script>
 <script src="GuidePage.js"></script>
 </html>
