--- a/FINAL2/login.html
+++ b/FINAL2/login.html
@@ -42,9 +42,10 @@
     <form id="guidelogin-form">
         <input id="enteredGuideName" type="text" placeholder="Username"  value=""/> <br>
         <input id="enteredGuidePass" type="password" placeholder="Password"  value=""/> <br>
-        <input id="guideLoginbutton" type="button" value="Login" onclick="checkGuideLogin()"/>
+        <input id="guideLoginbutton" type="button" value="Login" />
     </form>
 </div>
+<script src="Guide_Class.js"></script>
 <script src="User_Class.js"></script>
 <script src="Login.js"> </script>
 
