Review() finished - LET

--- a/OnurOgLeila/userPage.html
+++ b/OnurOgLeila/userPage.html
@@ -64,13 +64,13 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
     </tr>
 
 </table>
-<p>Additional comments</p>
 
-<textarea type="text" rows="5" cols="30" id="review-tour" value="" placeholder="Review the tour here!"></textarea>
+    <p>Additional comments</p>
+    <textarea type="text" rows="5" cols="30" id="review-tour" value="Send" placeholder="Review the tour here!"></textarea>
 </br>
-
 <!--Submit button to send review-->
 <button type="submit" style="cursor: pointer;">Review</button>
+
 <br>
 <br>
 
