Review() gets currentUser from localStorage

--- a/OnurOgLeila/userPage.html
+++ b/OnurOgLeila/userPage.html
@@ -65,11 +65,9 @@ console.log(JSON.parse(localStorage.getItem("currentUser")).Username)
 
 </table>
 
-    <p>Additional comments</p>
-    <textarea type="text" rows="5" cols="30" id="review-tour" value="Send" placeholder="Review the tour here!"></textarea>
-</br>
-<!--Submit button to send review-->
-<button type="submit" style="cursor: pointer;">Review</button>
+    <br>
+    <br>
+    <a href="review.html">See reviews for other tours here!</a>
 
 <br>
 <br>
